[gd_scene load_steps=9 format=3 uid="uid://cunfgpj8eub85"]

[ext_resource type="Script" uid="uid://88667vjt156f" path="res://Player/bullet.gd" id="1_tqmay"]
[ext_resource type="Texture2D" uid="uid://bkmce1bceckfl" path="res://Art/bulletanim.png" id="2_tqmay"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d7yj7"]
atlas = ExtResource("2_tqmay")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggrph"]
atlas = ExtResource("2_tqmay")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdgrx"]
atlas = ExtResource("2_tqmay")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7knge"]
atlas = ExtResource("2_tqmay")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tqmay"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7yj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggrph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdgrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7knge")
}],
"loop": true,
"name": &"Fly",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ki1tx"]
radius = 1.15346
height = 4.61539

[node name="bullet" type="RigidBody2D"]
gravity_scale = 0.0
linear_damp_mode = 1
script = ExtResource("1_tqmay")

[node name="BulletAnim" type="AnimatedSprite2D" parent="."]
texture_filter = 1
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_tqmay")
animation = &"Fly"
frame = 2
frame_progress = 0.496992

[node name="HitboxArea" type="Area2D" parent="." groups=["Bullet"]]
scale = Vector2(1.3, 1.3)

[node name="Hitbox" type="CollisionShape2D" parent="HitboxArea" groups=["Bullet"]]
position = Vector2(-0.769, 0.385)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ki1tx")

[connection signal="area_entered" from="HitboxArea" to="." method="_on_hitbox_area_area_entered"]
[connection signal="body_entered" from="HitboxArea" to="." method="_on_hitbox_area_body_entered"]
